samples/_failures_safe/1761155945_b1bdaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87c11039.c: In function ‘main’:
./samples/SAFE/__tmp_87c11039.c:130:39: error: unterminated argument list invoking macro "MATRIX_PRINT"
  130 |     MATRIX_PRINT(matrix2, rows2, cols2
      |                                       ^
./samples/SAFE/__tmp_87c11039.c:130:5: error: ‘MATRIX_PRINT’ undeclared (first use in this function)
  130 |     MATRIX_PRINT(matrix2, rows2, cols2
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_87c11039.c:130:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_87c11039.c:130:17: error: expected ‘;’ at end of input
  130 |     MATRIX_PRINT(matrix2, rows2, cols2
      |                 ^
      |                 ;
./samples/SAFE/__tmp_87c11039.c:130:5: error: expected declaration or statement at end of input
  130 |     MATRIX_PRINT(matrix2, rows2, cols2
      |     ^~~~~~~~~~~~
